# ctpLinuxTrade

./: CMakeLists.txt  TraderSpi.cpp  TraderSpi.h  main.cpp
